# Rust_Final_job

./: .gitattributes  .gitignore  Cargo.toml  PROJECT.md  README.md
.github/workflows/: ci.yml
demo/buggy-task-board/: KNOWN_ISSUES.md  README.md  REQUIREMENTS.md  package.json  server.js
demo/buggy-task-board/public/: app.js  index.html  styles.css
docs/: ACCEPTANCE.md  COURSE_REPORT.md  DEMO_GUIDE.md  EXPERIMENT.md  ROADMAP.md  THREAT_MODEL.md  specprobe-requirements.md
docs/report/: VIDEO_SCRIPT.md  build-pdf.mjs  final-report.html  shot-report.mjs
executors/playwright-runner/: README.md  package.json  runner.mjs
scripts/: cargo-msvc.ps1  run-demo.ps1
src/: ai.rs  apply.rs  browser.rs  check.rs  cli.rs  config.rs  diagnosis.rs  doctor.rs  lib.rs  main.rs  output.rs  patch.rs  playwright.rs  redact.rs  refine.rs  regression.rs  remediation.rs  report.rs  requirements.rs  review.rs  runtime.rs  scanner.rs  scenario.rs  storage.rs  testutil.rs  ui.rs
tests/: cli.rs
tests/fixtures/: demo-prd.md
tests/snapshots/: cli__requirements-demo-prd.snap
