[package]
name = "specprobe"
version = "0.8.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
thiserror = "2.0.18"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.43", features = ["json", "redactions"] }
